--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -1,21 +1,51 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/pokemonNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pokemon Name"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+    <ImageView
+        android:id="@+id/pokemonImageView"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/img"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="@string/pokemon_image" />
 
-    <TextView
-        android:id="@+id/pokemonTypeTextView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Pokemon Type"
-        android:textSize="16sp" />
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/pokemonNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pokemon Name"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/pokemonTypeTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pokemon Type"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/typeImageView"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/type_default"
+                android:contentDescription="@string/pokemon_type_image"
+                android:layout_marginStart="8dp"/>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
