--- a/app/src/main/res/layout/activity_pokemon_details.xml
+++ b/app/src/main/res/layout/activity_pokemon_details.xml
@@ -8,9 +8,7 @@
     <ImageView
         android:id="@+id/pokemonImageView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/type_default"
-        android:layout_marginBottom="16dp" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/pokemonNameTextView"
@@ -18,12 +16,14 @@
         android:layout_height="wrap_content"
         android:text="Pokemon Name"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:id="@+id/pokemonTypeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pokemon Type"
-        android:textSize="18sp" />
+        android:textSize="20sp"
+        android:layout_marginTop="8dp" />
 </LinearLayout>
