--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -6,46 +6,44 @@
 
     <ImageView
         android:id="@+id/pokemonImageView"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@drawable/img"
-        android:layout_marginEnd="16dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="8dp"
+        android:scaleType="centerCrop"
         android:contentDescription="@string/pokemon_image" />
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/pokemonNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pokemon Name"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@android:color/black" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/pokemonTypeTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Pokemon Type"
-                android:textSize="16sp" />
+                    android:id="@+id/pokemonTypeTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@android:color/black" />
 
             <ImageView
                 android:id="@+id/typeImageView"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/type_default"
-                android:contentDescription="@string/pokemon_type_image"
-                android:layout_marginStart="8dp"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="8dp"
+                android:scaleType="centerCrop"
+                android:contentDescription="@string/pokemon_type_image" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
